2003-06-19  Tim Waugh  <twaugh@redhat.com>
	* Makefile.am, doc/Makefile.am, doc/omf.make, doc/xmldocs.make:
	Fixes so that 'make distcheck' succeeds.
	* src/WriteXML.py (write_xml_data): Use a stable order for writing
	elements in XML.  This makes it useful to do revision control (RFE
	748165).

2003-06-18  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: keep focus on correct family after a new
	child is added

2003-06-18  Tim Waugh  <twaugh@redhat.com>
	* src/FamilyView.py (add_child_clicked): No reason to assume children
	are female.

2003-06-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteGedcom.py: catch filter exceptions
	* src/GenericFilter.py: eliminate loop detection

2003-06-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: Add a dialog to allow a child's relationships
	to his/her parents to be altered.
	* src/FamilyView.py: Add popup menu for childlist to allow the
	enabling of the new child relationship editor dialog
	* src/SelectChild.py: Child relationship editor
	* src/RelLib.py: Allow for altering of relationships of the
	AltFamilyList

2003-06-16  Tim Waugh  <twaugh@redhat.com>
	* src/FamilyView.py (north_american): Fixed traceback when adding
	a new child in the family view.

2003-06-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/FtmStyleAncestors.py, src/plugins/FtmStyleDescendants.py:
	Remove options_dialog function as it is not nedded anymore.
	* src/plugins/BookReport.py: Add lots of doc strings.
	* src/PedView.py (DispBox.__init__): Conditional display of "b." 
	and "d." strings depending on the availability of the appropriate date.
	* NEWS: Start new section for 0.9.3 release. 

2003-06-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: added select/edit buttions to family view
	* src/SelectChild.py: change title from Add Children to Add Child
	to Family
	* src/FamilyView: add support for adding spouse/child with full